--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "functions": {
-    "api/**/*.{js,ts}": {
+    ".vercel/output/functions/_render.func/**": {
+      "runtime": "nodejs20.x"
+    },
+    "api/**/*.js": {
       "runtime": "nodejs20.x"
     }
   }
